Creating files for second exercise

--- a/Ejercicio1/index.html
+++ b/Ejercicio1/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Prueba Tecnica de Desarrollo</h1>
+    <p>En consola puede visualizar la informacion</p>
     <script src="script.js"></script>
 </body>
 </html>
